--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Love Letter</title>
+    <title>Our 5 years</title>
     <link
     href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
     rel="stylesheet"
   />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="img/kairi-fotor-bg-remover-20240625185932.png" type="image/x-icon" />
   </head>
   <body>
     <audio id="background-audio" autoplay loop>
