--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="paper" draggable="true">
         <div class="content">
           <p></p>
-            This tree might have died and doesn't bloom any flowers now but as
+            These plants might have died and doesn't bloom any flowers now but as
             long as I have my best friend(not "as long as", Please stay with me
             till the end), I will keep working my hardest to make you all the
             flowers' garden that you love Airi❤️🌷
